--- a/locales/zh_CN/LC_MESSAGES/pages/support.po
+++ b/locales/zh_CN/LC_MESSAGES/pages/support.po
@@ -50,16 +50,16 @@ msgid ""
 msgstr ""
 
 #: ../../pages/support.rst:27
-msgid "Github Issue Tracker"
-msgstr "Github 议题追踪"
+msgid "GitHub Issue Tracker"
+msgstr "GitHub 议题追踪"
 
 #: ../../pages/support.rst:29
 msgid ""
-"Nuitka uses Github for public issue tracking (commercial users have a "
+"Nuitka uses GitHub for public issue tracking (commercial users have a "
 "private tracker available) and your can report the issue on the `issue "
 "tracker <https://github.com/Nuitka/Nuitka/issues>`_ there."
 msgstr ""
-"Nuitka 使用 Github 进行公共问题跟踪（商业用户有一个私人跟踪器可用），你可以在那里的 `问题跟踪器 "
+"Nuitka 使用 GitHub 进行公共问题跟踪（商业用户有一个私人跟踪器可用），你可以在那里的 `问题跟踪器 "
 "<https://github.com/Nuitka/Nuitka/issues>`_ 上报告问题。"
 
 #: ../../pages/support.rst:35
@@ -75,4 +75,3 @@ msgstr "试试聊天室，这不是问题跟踪器的替代品，但我们有它
 #, fuzzy
 msgid "Join the chat at https://gitter.im/Nuitka-chat/community"
 msgstr "加入聊天，请点击 https://gitter.im/Nuitka-chat/community"
-
