--- a/locales/zh_CN/LC_MESSAGES/doc/download.po
+++ b/locales/zh_CN/LC_MESSAGES/doc/download.po
@@ -749,7 +749,7 @@ msgid ""
 msgstr ""
 
 #: ../../doc/doc/download.rst:355
-msgid "Github"
+msgid "GitHub"
 msgstr ""
 
 #: ../../doc/doc/download.rst:357
@@ -769,7 +769,7 @@ msgstr ""
 #: ../../doc/doc/download.rst:362
 msgid ""
 "Visit https://github.com/Nuitka/Nuitka for the Nuitka repository on "
-"Github."
+"GitHub."
 msgstr ""
 
 #~ msgid ""
